--- a/package.json
+++ b/package.json
@@ -4,18 +4,30 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@iconify/icons-fa": "^1.1.0",
+    "@iconify/icons-mdi": "^1.1.17",
+    "@iconify/react": "^3.0.0-beta.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/google.fonts": "^1.0.3",
     "bootstrap": "4.6.0",
     "jsx": "^0.9.89",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
+    "react-icons": "^4.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
+    "react-typed": "^1.2.0",
     "sass": "^1.37.5",
     "scss": "^0.2.4",
     "styled-components": "^5.3.0",
