--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@iconify/icons-fa": "^1.1.0",
+    "@iconify/icons-logos": "^1.1.10",
     "@iconify/icons-mdi": "^1.1.17",
     "@iconify/react": "^3.0.0-beta.1",
     "@testing-library/jest-dom": "^5.11.4",
